add ascript to install packages, update readme, add lines to write a table S10

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,8 @@ default:
   resultdir: "results"
   plotdir: "plots"
   scriptdir: "scripts"
+  Rlibdir: "R_libraries"
+
 #  threads: 4
 
 ## to activate alternative environment: `Sys.setenv(R_CONFIG_ACTIVE = "old_DE")`
